force-app/main/default/objects/Ledger_Type_Action__mdt/Ledger_Type_Action__mdt.object-meta.xml
<CustomObject>
    <label>Ledger Type Action</label>
    <pluralLabel>Ledger Type Actions</pluralLabel>
</CustomObject>