force-app/main/default/objects/Ledger_Type_Action__mdt/fields/Action_Name__c.field-meta.xml
<CustomField>
    <fullName>Action_Name__c</fullName>
    <label>Action Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>