force-app/main/default/objects/Ledger_Type_Action__mdt/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <referenceTo>Ledger_Type_Configuration__mdt</referenceTo>
    <relationshipLabel>Ledger Type Actions</relationshipLabel>
    <relationshipName>Ledger_Type_Actions</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>