force-app/main/default/objects/Ledger_Type_Action__mdt/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>