force-app/main/default/objects/Ledger_Type_Action__mdt/listViews/All_Actions.listView-meta.xml
<ListView>
    <fullName>All_Actions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Action_Label__c</columns>
    <columns>Action_Name__c</columns>
    <columns>Configuration__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Actions</label>
</ListView>