force-app/main/default/objects/Ledger_Type_Action__mdt/listViews/Asset_Actions.listView-meta.xml
<ListView>
    <fullName>Asset_Actions</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Action_Label__c</columns>
    <columns>Action_Name__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Configuration__c</field>
        <operation>equals</operation>
        <value>Asset_Configuration</value>
    </filters>
    <label>Asset Actions</label>
</ListView>